--- a/vuex-demo/package.json
+++ b/vuex-demo/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "vue-demo",
+  "name": "vuex-demo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --config ./config/webpack.dev.config.js --open --hot"
+    "dev": "webpack-dev-server --config ./config/webpack.dev.config.js --open --hot",
+    "prod": "webpack --config ./config/webpack.prod.config.js"
   },
-  "author": "",
+  "author": "rencoo",
   "license": "ISC",
   "dependencies": {
     "vue": "^2.6.11",
@@ -18,6 +19,7 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.0",
     "babel-preset-latest": "^6.24.1",
+    "html-webpack-plugin": "^3.2.0",
     "vue-loader": "^15.7.2",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.1.0",
